frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');

:root {
    font-family: 'Urbanist' !important;
}

html,
body {
    font-weight: 500;
    overflow-x: hidden;
    position: relative;
    width: 100%;
    max-width: 100%;
    overscroll-behavior-x: none;
    -webkit-overflow-scrolling: touch;
}

#root {
    overflow-x: hidden;
    width: 100%;
    position: relative;
}

* {
    font-family: 'Urbanist' !important;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
    .perspective-1000 {
        perspective: 1000px;
    }

    .rotate-y-minus-12 {
        transform: rotateY(-12deg);
    }

    /* Hide scrollbar for Chrome, Safari and Opera */
    .no-scrollbar::-webkit-scrollbar {
        display: none;
    }

    /* Hide scrollbar for IE, Edge and Firefox */
    .no-scrollbar {
        -ms-overflow-style: none;
        /* IE and Edge */
        scrollbar-width: none;
        /* Firefox */
    }
}

/* Global scrollbar removal */
*::-webkit-scrollbar {
    display: none;
}

* {
    -ms-overflow-style: none;
    scrollbar-width: none;
}


@keyframes float {

    0%,
    100% {
        transform: translateY(0px);
    }

    50% {
        transform: translateY(-20px);
    }
}

.animate-float {
    animation: float 6s ease-in-out infinite;
}

